--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,3 +14,79 @@ footer {
   height: 704px;
   border: 1px solid;
 }
+.contacts__title {
+  border: 1px solid blue;
+  grid-area: title;
+}
+.adress {
+  border: 1px solid blue;
+  grid-area: adress;
+}
+.number {
+  border: 1px solid blue;
+  grid-area: number;
+}
+.email {
+  border: 1px solid blue;
+  grid-area: email;
+}
+.hours {
+  border: 1px solid blue;
+  grid-area: hours;
+}
+.contacts {
+  border: 1px solid red;
+  grid-area: contacts;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(1vh, auto);
+  grid-template-areas:
+    "title title"
+    "adress number"
+    "email hours";
+}
+.map {
+  border: 1px solid red;
+  grid-area: map;
+  justify-self: flex-end;
+}
+.social {
+  border: 1px solid red;
+  grid-area: social;
+}
+.bottom {
+  margin-right: 2vw;
+  border: 1px solid red;
+  grid-area: bottom;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bottom__logo {
+  border: 1px solid blue;
+}
+.nav {
+  border: 1px solid blue;
+  width: 70vw;
+  display: flex;
+  justify-content: space-between;
+}
+.copyrights {
+  border: 1px solid red;
+  grid-area: copyrights;
+  justify-self: center;
+  align-self: center;
+}
+.footer__container {
+  margin-left: 2vw;
+  height: 704px;
+  border: 2px solid yellow;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(1vh, auto);
+  grid-template-areas:
+    "contacts map"
+    "social map"
+    "bottom bottom"
+    "copyrights copyrights";
+}
