--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,39 +1,109 @@
 header {
   height: 918px;
   border: 1px solid black;
+  background-image: url(./background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+.header__nav {
+  display: flex;
+}
+
+.header__nav_logo {
+  margin-left: 70px;
+  margin-top: 12px;
+  height: 142px;
+  width: 111px;
+}
+
+.header__nav_menu {
+  display: flex;
+  height: 15px;
+  width: 702px;
+  justify-content: space-between;
+  margin-top: 39px;
+  margin-left: 250px;
+
+}
+
+.header__nav_menu a {
+  text-decoration: none;
+  color: #fff;
+  font-family: montserrat;
+  font-size: 14px;
+}
+
+#blue {
+  color: #037e8c;
+}
+
+.header__nav_callme {
+  margin-top: 36px;
+  margin-left: auto;
+  margin-right: 74px;
+}
+
+.header__tel {
+  letter-spacing: 10px;
+}
+
+
+.header__form {
+  width: 180px;
+  height: 40px;
+  margin-top: 11px;
+  position: absolute;
+  margin-left: 28px;
+
+}
+
+.header__call {
+  margin-top: 25px;
+  margin-left: 50px;
+}
+
+
 .info {
   height: 245px;
   border: 1px solid;
 }
+
 main {
   height: 7546px;
   border: 1px solid;
 }
+
 footer {
   height: 704px;
   border: 1px solid;
 }
+
 .contacts__title {
   border: 1px solid blue;
   grid-area: title;
 }
+
 .adress {
   border: 1px solid blue;
   grid-area: adress;
 }
+
 .number {
   border: 1px solid blue;
   grid-area: number;
 }
+
 .email {
   border: 1px solid blue;
   grid-area: email;
 }
+
 .hours {
   border: 1px solid blue;
   grid-area: hours;
 }
+
 .contacts {
   border: 1px solid red;
   grid-area: contacts;
@@ -45,15 +115,18 @@ footer {
     "adress number"
     "email hours";
 }
+
 .map {
   border: 1px solid red;
   grid-area: map;
   justify-self: flex-end;
 }
+
 .social {
   border: 1px solid red;
   grid-area: social;
 }
+
 .bottom {
   margin-right: 2vw;
   border: 1px solid red;
@@ -62,21 +135,25 @@ footer {
   justify-content: space-between;
   align-items: center;
 }
+
 .bottom__logo {
   border: 1px solid blue;
 }
+
 .nav {
   border: 1px solid blue;
   width: 70vw;
   display: flex;
   justify-content: space-between;
 }
+
 .copyrights {
   border: 1px solid red;
   grid-area: copyrights;
   justify-self: center;
   align-self: center;
 }
+
 .footer__container {
   margin-left: 2vw;
   height: 704px;
