--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,11 +1,14 @@
+.global-container {
+  width: 1440px;
+  margin: auto;
+}
 body {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   color: #121214;
 }
-
 
 header {
   height: 918px;
@@ -131,7 +134,7 @@ main {
 
 /*ROUTS START*/
 .routs {
-  background: #F4F4F4;
+  background: #f4f4f4;
 }
 
 .routs__title {
@@ -169,9 +172,9 @@ main {
   text-transform: uppercase;
 }
 
-.route__time>span,
-.route__distance>span,
-.route__complexity>span {
+.route__time > span,
+.route__distance > span,
+.route__complexity > span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -219,7 +222,7 @@ main {
 
 .btn-details {
   background: none;
-  border: 1.5px solid #037E8C;
+  border: 1.5px solid #037e8c;
   box-sizing: border-box;
   border-radius: 9px;
   margin-right: 15px;
@@ -230,11 +233,11 @@ main {
   font-weight: 600;
   font-size: 14px;
   line-height: 130%;
-  color: #037E8C;
+  color: #037e8c;
 }
 
 .btn-reserve {
-  background: #037E8C;
+  background: #037e8c;
   border-radius: 9px;
   border: none;
 }
@@ -244,7 +247,7 @@ main {
   font-weight: 600;
   font-size: 14px;
   line-height: 130%;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 /*ROUTS END*/
