--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -251,38 +251,35 @@ main {
 }
 
 /*ROUTS END*/
+
 footer {
   height: 704px;
   border: 1px solid;
 }
 
 .contacts__title {
-  border: 1px solid blue;
   grid-area: title;
 }
 
 .adress {
-  border: 1px solid blue;
   grid-area: adress;
 }
 
 .number {
-  border: 1px solid blue;
   grid-area: number;
 }
 
 .email {
-  border: 1px solid blue;
   grid-area: email;
 }
 
 .hours {
-  border: 1px solid blue;
   grid-area: hours;
 }
 
 .contacts {
-  border: 1px solid red;
+  margin-right: 1vw;
+  border-top: 3px solid #037e8c;
   grid-area: contacts;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -295,38 +292,38 @@ footer {
 .contacts__title {
   font-weight: 700;
   font-size: 2.5em;
-  line-height: 1.5em;
 }
 .connect {
-  border: 2px solid black;
   display: flex;
   align-items: flex-start;
 }
+
 .connect__title {
-  margin: 1vh auto auto 1vh;
-  border: 2px solid blue;
-  font-size: 1.3em;
-}
-.connect__img {
-  border: 2px solid red;
+  margin: 2% auto auto 5%;
+  font-size: 1.2em;
 }
 .map {
-  border: 1px solid red;
   grid-area: map;
   justify-self: flex-end;
 }
 
 .social {
-  border: 1px solid red;
   grid-area: social;
 }
 .social__title {
-  font-size: 24px;
-  line-height: 36.28px;
+  font-size: 1.6em;
+}
+
+.social__img_whatsap {
+  margin-right: 3%;
 }
 .bottom {
-  margin-right: 2vw;
-  border: 1px solid red;
+  height: 83px;
+  border-top: 1px solid #121214;
+  border-bottom: 1px solid #121214;
+
+  margin-right: 5%;
+  margin-top: 3%;
   grid-area: bottom;
   display: flex;
   justify-content: space-between;
@@ -334,13 +331,12 @@ footer {
 }
 
 .bottom__logo {
-  margin-left: 5vw;
-  border: 1px solid blue;
+  margin-left: 8%;
 }
 
 .nav {
-  border: 1px solid blue;
-  width: 70vw;
+  width: 67%;
+
   font-weight: 600;
   display: flex;
   justify-content: space-between;
@@ -354,18 +350,16 @@ footer {
 }
 
 .copyrights {
+  margin: auto;
+  margin-bottom: 2%;
   font-size: 1.1em;
   color: #787878;
-  border: 1px solid red;
   grid-area: copyrights;
-  justify-self: center;
-  align-self: center;
 }
 
 .footer__container {
-  margin-left: 2vw;
+  margin-left: 5%;
   height: 704px;
-  border: 2px solid yellow;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: minmax(1vh, auto);
