--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,7 @@
   width: 1440px;
   margin: auto;
 }
+
 body {
   font-family: "Montserrat";
   font-style: normal;
@@ -10,7 +11,7 @@ body {
   color: #121214;
 }
 
-header {
+.header {
   height: 918px;
   border: 1px solid black;
   background-image: url(./background.png);
@@ -36,6 +37,7 @@ header {
   justify-content: space-between;
   margin-top: 39px;
   margin-left: 250px;
+
 }
 
 .header__nav_menu a {
@@ -59,17 +61,63 @@ header {
   letter-spacing: 10px;
 }
 
+
 .header__form {
   width: 180px;
   height: 40px;
   margin-top: 11px;
   position: absolute;
   margin-left: 28px;
+
 }
 
 .header__call {
   margin-top: 25px;
   margin-left: 50px;
+}
+
+
+.header__bigtext {
+  display: flex;
+  width: 595px;
+  height: 264px;
+  margin-left: 70px;
+  margin-top: 25px;
+}
+
+.header__bigtext p {
+  color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 70px;
+  font-weight: 800;
+  letter-spacing: 0.045em;
+}
+
+.header__smalltext {
+  margin-left: 70px;
+  margin-top: 125px;
+}
+
+.header__smalltext p {
+  color: #fff;
+  font-size: 24px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 108.7%;
+}
+
+.header__bluebutton {
+  margin-top: 100px;
+  margin-left: 70px;
+  word-spacing: 30px;
+}
+
+.header__route {
+  margin-left: -290px;
+  margin-bottom: 19px;
+}
+
+.header__cursor {
+  margin-bottom: 12px;
 }
 
 /*INFO START*/
@@ -172,9 +220,9 @@ main {
   text-transform: uppercase;
 }
 
-.route__time > span,
-.route__distance > span,
-.route__complexity > span {
+.route__time>span,
+.route__distance>span,
+.route__complexity>span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -289,10 +337,12 @@ footer {
     "adress number"
     "email hours";
 }
+
 .contacts__title {
   font-weight: 700;
   font-size: 2.5em;
 }
+
 .connect {
   display: flex;
   align-items: flex-start;
@@ -302,6 +352,7 @@ footer {
   margin: 2% auto auto 5%;
   font-size: 1.2em;
 }
+
 .map {
   grid-area: map;
   justify-self: flex-end;
@@ -310,6 +361,7 @@ footer {
 .social {
   grid-area: social;
 }
+
 .social__title {
   font-size: 1.6em;
 }
@@ -317,6 +369,7 @@ footer {
 .social__img_whatsap {
   margin-right: 3%;
 }
+
 .bottom {
   height: 83px;
   border-top: 1px solid #121214;
@@ -341,10 +394,12 @@ footer {
   display: flex;
   justify-content: space-between;
 }
+
 .nav__link {
   color: #121214;
   text-decoration: none;
 }
+
 .nav__link:hover {
   text-decoration: underline;
 }
