--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -218,9 +218,9 @@ main {
   text-transform: uppercase;
 }
 
-.route__time > span,
-.route__distance > span,
-.route__complexity > span {
+.route__time>span,
+.route__distance>span,
+.route__complexity>span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -294,6 +294,77 @@ main {
   font-size: 14px;
   line-height: 130%;
   color: #ffffff;
+}
+
+/*Team*/
+.team {
+  margin: 45px;
+  text-align: center;
+}
+
+.team-title {
+  margin: 0;
+  grid-area: t-title;
+  font-size: 36px;
+  text-align: center;
+}
+
+.t_photo {
+  background-color: #f4f4f4;
+  height: 409px;
+  border-radius: 9px;
+}
+
+.t_photo__title {
+  margin-top: 10px;
+  margin-right: 150px;
+}
+
+.t_photo__link {
+  font-weight: 700;
+  font-size: 24px;
+  text-decoration: none;
+  color: #037e8c;
+}
+
+.t_photo__img {
+  border-top-right-radius: 9px;
+  border-top-left-radius: 9px;
+}
+
+.function_team {
+  font-weight: 400px;
+  font-size: 18px;
+  margin: 0 5%;
+}
+
+.photo-Yl {
+  grid-area: p-Yl;
+}
+
+.photo-Kr {
+  grid-area: p-Kr;
+}
+
+.photo-Mx {
+  grid-area: p-Mx;
+}
+
+.photo-Yr {
+  grid-area: p-Yr;
+}
+
+.team-container {
+  height: 515px;
+  margin: 0 5%;
+  padding-bottom: 1%;
+  display: grid;
+
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 12% 1fr 1fr;
+  grid-template-areas:
+    "t-title t-title t-title t-title"
+    "p-Yl p-Mx p-Kr p-Yr";
 }
 
 /*ROUTS END*/
@@ -457,11 +528,11 @@ main {
   display: none;
 }
 
-.block__hide + .block__label ~ .answer {
+.block__hide+.block__label~.answer {
   display: none;
 }
 
-.block__hide:checked + .block__label + .answer {
+.block__hide:checked+.block__label+.answer {
   display: block;
   padding-top: 3%;
 }
