--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -183,6 +183,52 @@ main {
   background: #f4f4f4;
 }
 
+.routes__inner {
+  background: url(/assets/images/routs/rout-bg.svg);
+}
+
+.route__content--basic,
+.route__content--exp {
+  padding: 0 60px 0 110px;
+  position: relative;
+  margin-left: 70px;
+}
+
+.route__content--basic::before {
+  content: "";
+  background-color: #037e8c;
+  height: 3px;
+  width: 81px;
+  position: absolute;
+  top: 57px;
+  left: 0;
+}
+
+.route__content--exp::before {
+  content: "";
+  background-color: #037e8c;
+  height: 3px;
+  width: 81px;
+  position: absolute;
+  top: 57px;
+  left: 0;
+}
+
+.route__content--ext {
+  padding: 0 70px 0 110px;
+  position: relative;
+}
+
+.route__content--ext::before {
+  content: "";
+  background-color: #037e8c;
+  height: 3px;
+  width: 81px;
+  position: absolute;
+  top: 57px;
+  left: 0;
+}
+
 .routs__title {
   font-weight: 700, bold;
   font-size: 36px;
@@ -196,6 +242,7 @@ main {
   font-weight: 600;
   font-size: 36px;
   line-height: 108.7%;
+  text-transform: uppercase;
 }
 
 .route__price {
@@ -218,9 +265,9 @@ main {
   text-transform: uppercase;
 }
 
-.route__time > span,
-.route__distance > span,
-.route__complexity > span {
+.route__time>span,
+.route__distance>span,
+.route__complexity>span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -296,21 +343,95 @@ main {
   color: #ffffff;
 }
 
+/*routs sliders*/
+
+.basic,
+.extantion,
+.experience {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  min-width: 0;
+  padding-bottom: 50px;
+}
+
+.swiper-container {
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: auto;
+  width: 100%;
+}
+
+.swiper-container--2 {
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: auto;
+  width: 90%;
+}
+
+.swiper-container--2 {
+  margin-right: 30px;
+}
+
+.swiper-slide__img,
+.swiper-slide__img--2 {
+  max-width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+
+.swiper-pagination,
+.swiper-pagination--2 {
+  position: inherit;
+  margin-top: 20px;
+  display: flex;
+}
+
+.swiper-pagination--2 {
+  justify-content: end;
+}
+
+.swiper-pagination::after {
+  content: 'scroll';
+  font-family: 'poppins';
+  margin-left: 50px;
+}
+
+.swiper-pagination--2::after {
+  content: 'scroll';
+  font-family: 'poppins';
+  margin-left: 50px;
+
+}
+
+.swiper-pagination-bullet {
+  background: #000;
+}
+
+.swiper-pagination-bullet-active {
+  background: #037E8C;
+}
+
+
 /*ROUTS END*/
 /*--------------------------Questions-----------------------------*/
 .feedback {
   position: relative;
 }
+
 .feedback__quad {
   position: absolute;
   right: 0;
   bottom: 25%;
 }
+
 .feedback__spring {
   position: absolute;
   left: 0;
   top: 38%;
 }
+
 .feedback__container {
   height: 611px;
   margin: 0 12%;
@@ -327,6 +448,7 @@ main {
   text-align: center;
   align-self: center;
 }
+
 .ask {
   text-align: center;
   grid-area: ask;
@@ -337,6 +459,7 @@ main {
   font-weight: 600;
   font-size: 1.6em;
 }
+
 .ask__button {
   margin-top: 5%;
   width: 45%;
@@ -346,87 +469,109 @@ main {
   border-radius: 9px;
   border: none;
 }
+
 .questions {
   grid-area: questions;
 }
+
 .answer {
   line-height: 21px;
 }
+
 .block {
   padding: 4%;
   margin-top: 1.5%;
   border: 0.5px solid #848484;
   border-radius: 2px;
 }
+
 .block__label {
   font-weight: 600;
   font-size: 1.1em;
   display: flex;
   justify-content: space-between;
 }
+
 .block:hover {
   border: 1px solid #037e8c;
 }
+
 .block__hide {
   display: none;
 }
-.block__hide + .block__label ~ .answer {
+
+.block__hide+.block__label~.answer {
   display: none;
 }
-.block__hide:checked + .block__label + .answer {
+
+.block__hide:checked+.block__label+.answer {
   display: block;
   padding-top: 3%;
 }
+
 /*---------------------------Extra--------------------------------*/
 .extra__title {
   margin: 0;
   grid-area: e-title;
   text-align: center;
 }
+
 .photo {
   background-color: #f4f4f4;
   height: 309px;
   border-radius: 9px;
   margin: 3% auto;
 }
+
 .photo__title {
   margin-left: 8%;
   margin-top: 7%;
 }
+
 .photo__link {
   font-weight: 600;
   font-size: 1.2em;
   text-decoration: none;
   color: #037e8c;
 }
+
 .photo__img {
   border-top-right-radius: 9px;
   border-top-left-radius: 9px;
 }
+
 .photo-one {
   grid-area: p-one;
 }
+
 .photo-two {
   grid-area: p-two;
 }
+
 .photo-three {
   grid-area: p-three;
 }
+
 .photo-four {
   grid-area: p-four;
 }
+
 .photo-five {
   grid-area: p-five;
 }
+
 .photo-six {
   grid-area: p-six;
 }
+
 .photo-seven {
   grid-area: p-seven;
 }
+
 .photo-eight {
   grid-area: p-eight;
 }
+
 .extra-container {
   height: 751px;
   margin: 0 5%;
@@ -440,6 +585,7 @@ main {
     "p-one p-two p-three p-four"
     "p-five p-six p-seven p-eight";
 }
+
 /*---------------------------Footer-------------------------------*/
 footer {
   height: 704px;
@@ -478,6 +624,7 @@ footer {
     "adress number"
     "email hours";
 }
+
 .contacts__title,
 .feedback__title,
 .extra__title {
