--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -343,71 +343,76 @@ main {
   color: #ffffff;
 }
 
-/*Slider*/
-.slick-track {
+/*routs sliders*/
+
+.basic,
+.extantion,
+.experience {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  min-width: 0;
+  padding-bottom: 50px;
+}
+
+.swiper-container {
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: auto;
+  width: 100%;
+}
+
+.swiper-container--2 {
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: auto;
+  width: 90%;
+}
+
+.swiper-container--2 {
+  margin-right: 30px;
+}
+
+.swiper-slide__img,
+.swiper-slide__img--2 {
+  max-width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+
+.swiper-pagination,
+.swiper-pagination--2 {
+  position: inherit;
+  margin-top: 20px;
   display: flex;
-  align-items: flex-start;
 }
 
-.slider {
-  position: relative;
-  padding: 0px 60px;
+.swiper-pagination--2 {
+  justify-content: end;
 }
 
-.pic1,
-.pic2,
-.pic3,
-.pic4,
-.pic5 {
-  border-radius: 30px;
-  border: 8px #000000;
+.swiper-pagination::after {
+  content: 'scroll';
+  font-family: 'poppins';
+  margin-left: 50px;
 }
 
-.slider .slick-arrow {
-  position: absolute;
-  top: 50%;
-  margin: -15px 0 0 0;
-  z-index: 10;
-  font-size: 0;
-  width: 30px;
-  height: 30px;
+.swiper-pagination--2::after {
+  content: 'scroll';
+  font-family: 'poppins';
+  margin-left: 50px;
+
 }
 
-.slider .slick-arrow.slick-prev {
-  left: 0;
-  background: url(../images/slider/002.png) 0 /100% no-repeat;
-  border: 0px;
+.swiper-pagination-bullet {
+  background: #000;
 }
 
-.slider .slick-arrow.slick-next {
-  right: 0;
-  background: url(../images/slider/001.png) 0 /100% no-repeat;
-  border: 0px;
+.swiper-pagination-bullet-active {
+  background: #037E8C;
 }
 
-.slider .slick-dots {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.slider .slick-dots li {
-  list-style: none;
-  margin: 0px 10px;
-}
-
-.slider .slick-dots button {
-  font-size: 0px;
-  width: 8px;
-  height: 8px;
-  background: #121214;
-  border-radius: 50%;
-  transform: rotate(90deg);
-}
-
-.slider .slick-dots li.slick-active button {
-  background: #037e8c;
-}
 
 /*Team*/
 .team {
