media-max  1920px

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,9 +1,7 @@
-.global-container {
-  width: 1440px;
-  margin: auto;
-}
-
 body {
+  max-width: 1920px;
+  width: 100%;
+  margin: auto;
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
@@ -265,9 +263,9 @@ main {
   text-transform: uppercase;
 }
 
-.route__time>span,
-.route__distance>span,
-.route__complexity>span {
+.route__time > span,
+.route__distance > span,
+.route__complexity > span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -380,7 +378,6 @@ main {
   object-fit: cover;
 }
 
-
 .swiper-pagination,
 .swiper-pagination--2 {
   position: inherit;
@@ -393,16 +390,15 @@ main {
 }
 
 .swiper-pagination::after {
-  content: 'scroll';
-  font-family: 'poppins';
+  content: "scroll";
+  font-family: "poppins";
   margin-left: 50px;
 }
 
 .swiper-pagination--2::after {
-  content: 'scroll';
-  font-family: 'poppins';
+  content: "scroll";
+  font-family: "poppins";
   margin-left: 50px;
-
 }
 
 .swiper-pagination-bullet {
@@ -410,9 +406,8 @@ main {
 }
 
 .swiper-pagination-bullet-active {
-  background: #037E8C;
+  background: #037e8c;
 }
-
 
 /*Team*/
 .team {
@@ -594,8 +589,7 @@ main {
 .main__sertificate {
   margin-top: -330px;
   height: 610px;
-  background-image: url(./unsplash_Bkci_8qcdvQ\ \(Traced\).svg);
-
+  background-image: url(./unsplash_Bkci_8qcdvQ\\(Traced\).svg);
 }
 
 .main__sertificate_title {
@@ -619,11 +613,9 @@ main {
   padding-top: 40px;
   margin-top: 20px;
   justify-content: space-around;
-
 }
 
 .main__blocktext {
-
   height: 312px;
   width: 636px;
 }
@@ -745,13 +737,12 @@ main {
   display: none;
 }
 
-.block__hide+.block__label~.answer {
+.block__hide + .block__label ~ .answer {
   display: none;
 }
-
-.block__hide:checked+.block__label+.answer {
+.block:hover .answer {
   display: block;
-  padding-top: 3%;
+  padding-top: 2%;
 }
 
 /*---------------------------Extra--------------------------------*/
@@ -781,6 +772,7 @@ main {
 }
 
 .photo__img {
+  max-width: 100%;
   border-top-right-radius: 9px;
   border-top-left-radius: 9px;
 }
@@ -891,7 +883,9 @@ footer {
   grid-area: map;
   justify-self: flex-end;
 }
-
+.map__img {
+  max-width: 100%;
+}
 .social {
   grid-area: social;
 }
