--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 .global-container {
-  width: 1440px;
+  max-width: 1440px;
   margin: auto;
 }
 
@@ -175,7 +175,6 @@ body {
 
 main {
   height: 7546px;
-  border: 1px solid;
 }
 
 /*ROUTS START*/
@@ -309,8 +308,8 @@ main {
 
 .btn-details,
 .btn-reserve {
-  width: 175px;
-  height: 45px;
+  width: 35%;
+  height: 10%;
 }
 
 .btn-details {
@@ -319,9 +318,7 @@ main {
   box-sizing: border-box;
   border-radius: 9px;
   margin-right: 15px;
-}
 
-.btn-details a {
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
@@ -333,9 +330,7 @@ main {
   background: #037e8c;
   border-radius: 9px;
   border: none;
-}
 
-.btn-reserve a {
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
