--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -896,7 +896,6 @@ footer {
 }
 
 .bottom {
-  height: 83px;
   border-top: 1px solid #121214;
   border-bottom: 1px solid #121214;
 
@@ -910,6 +909,8 @@ footer {
 
 .bottom__logo {
   margin-left: 8%;
+  max-height: 100%;
+  height: 100%;
 }
 
 .nav {
@@ -931,7 +932,6 @@ footer {
 
 .copyrights {
   margin: auto;
-  margin-bottom: 2%;
   font-size: 1.1em;
   color: #787878;
   grid-area: copyrights;
@@ -942,7 +942,7 @@ footer {
   height: 704px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: minmax(1vh, auto);
+  grid-template-rows: auto auto 18% 11%;
   grid-template-areas:
     "contacts map"
     "social map"
