--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,6 +9,8 @@ body {
   color: #121214;
 }
 
+/*-----------------------sasha's part------------------------------------*/
+
 .header {
   height: 918px;
   border: 1px solid black;
@@ -115,6 +117,181 @@ body {
 .header__cursor {
   margin-bottom: 12px;
 }
+
+.main__offer {
+  margin-top: 100px;
+  background-image: url(./багги\ 2.svg);
+  background-repeat: no-repeat;
+  background-position-y: top;
+}
+
+.main__offer_text {
+  display: flex;
+  font-size: 36px;
+  font-weight: 700;
+  color: #373737;
+  justify-content: center;
+  align-items: center;
+}
+
+.main__cards {
+  display: flex;
+  margin-left: 55px;
+}
+
+.item_container {
+  display: flex;
+  position: relative;
+  top: -315px;
+}
+
+.bantdom {
+  border-radius: 10px 0px 0px 10px;
+}
+
+.card-title {
+  color: #037e8c;
+  font-size: 36px;
+  font-weight: 800;
+}
+
+.card-title2 {
+  color: #037e8c;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.text {
+  padding: 15px;
+  margin-top: 20px;
+}
+
+.card-title3 {
+  margin-top: 20px;
+  color: #373737;
+  font-size: 18px;
+}
+
+.main__offer {
+  height: 500px;
+}
+
+.main__offer_button {
+  margin-top: 20px;
+}
+
+.main__offer_buttonword {
+  margin-left: -135px;
+  margin-bottom: 13px;
+}
+
+.item_picture {
+  position: relative;
+  top: -12px;
+  left: 13px;
+}
+
+.item_picture2 {
+  position: relative;
+  top: -74px;
+  left: 13px;
+}
+
+.main__sertificate {
+  margin-top: -330px;
+  height: 610px;
+  background-image: url(./unsplash_Bkci_8qcdvQ\\Traced\.svg);
+}
+
+.main__sertificate_title {
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+}
+
+.main__sertificate_title2 {
+  color: #037e8c;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+  font-size: medium;
+}
+
+.main__sertificate_container {
+  display: flex;
+  height: 312px;
+  padding-top: 40px;
+  margin-top: 20px;
+  justify-content: space-around;
+}
+
+.main__blocktext {
+  height: 312px;
+  width: 636px;
+}
+
+.main__card {
+  height: 312px;
+  width: 636px;
+  background-color: #373737;
+  border-radius: 10px;
+}
+
+.main__card_blot {
+  position: relative;
+  left: 332px;
+  top: -8px;
+  border-radius: 10px;
+}
+
+.main__card_bant {
+  position: relative;
+  margin-top: -170px;
+  margin-left: 20px;
+}
+
+.main__card_sert {
+  position: relative;
+  top: -280px;
+  left: 190px;
+}
+
+.main__card_logo {
+  position: relative;
+  top: -260px;
+  left: 450px;
+}
+
+.main__card_text1 {
+  position: relative;
+  top: -360px;
+  left: 130px;
+}
+
+.main__card_text2 {
+  position: relative;
+  top: -320px;
+  left: 130px;
+}
+
+.main__textcard {
+  padding: 40px 0px 0px 40px;
+}
+
+.main__input {
+  position: relative;
+  top: 35px;
+  left: 40px;
+}
+
+.main__input2 {
+  position: relative;
+  left: -220px;
+  top: 20px;
+}
+
+/*---------------------------sashas' part---------------------------------*/
 
 /*INFO START*/
 .info {
@@ -261,9 +438,9 @@ main {
   text-transform: uppercase;
 }
 
-.route__time > span,
-.route__distance > span,
-.route__complexity > span {
+.route__time>span,
+.route__distance>span,
+.route__complexity>span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -501,178 +678,6 @@ main {
     "questions ask";
 }
 
-.main__offer {
-  margin-top: 100px;
-  background-image: url(./багги\ 2.svg);
-  background-repeat: no-repeat;
-  background-position-y: top;
-}
-
-.main__offer_text {
-  display: flex;
-  font-size: 36px;
-  font-weight: 700;
-  color: #373737;
-  justify-content: center;
-  align-items: center;
-}
-
-.main__cards {
-  display: flex;
-  margin-left: 55px;
-}
-
-.item_container {
-  display: flex;
-  position: relative;
-  top: -315px;
-}
-
-.bantdom {
-  border-radius: 10px 0px 0px 10px;
-}
-
-.card-title {
-  color: #037e8c;
-  font-size: 36px;
-  font-weight: 800;
-}
-
-.card-title2 {
-  color: #037e8c;
-  font-size: 24px;
-  font-weight: 700;
-}
-
-.text {
-  padding: 15px;
-  margin-top: 20px;
-}
-
-.card-title3 {
-  margin-top: 20px;
-  color: #373737;
-  font-size: 18px;
-}
-
-.main__offer {
-  height: 500px;
-}
-
-.main__offer_button {
-  margin-top: 20px;
-}
-
-.main__offer_buttonword {
-  margin-left: -135px;
-  margin-bottom: 13px;
-}
-
-.item_picture {
-  position: relative;
-  top: -12px;
-  left: 13px;
-}
-
-.item_picture2 {
-  position: relative;
-  top: -74px;
-  left: 13px;
-}
-
-.main__sertificate {
-  margin-top: -330px;
-  height: 610px;
-  background-image: url(./unsplash_Bkci_8qcdvQ\\Traced\.svg);
-}
-
-.main__sertificate_title {
-  display: flex;
-  justify-content: center;
-  padding: 30px;
-}
-
-.main__sertificate_title2 {
-  color: #037e8c;
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  padding-top: 15px;
-  font-size: medium;
-}
-
-.main__sertificate_container {
-  display: flex;
-  height: 312px;
-  padding-top: 40px;
-  margin-top: 20px;
-  justify-content: space-around;
-}
-
-.main__blocktext {
-  height: 312px;
-  width: 636px;
-}
-
-.main__card {
-  height: 312px;
-  width: 636px;
-  background-color: #373737;
-  border-radius: 10px;
-}
-
-.main__card_blot {
-  position: relative;
-  left: 332px;
-  top: -8px;
-  border-radius: 10px;
-}
-
-.main__card_bant {
-  position: relative;
-  margin-top: -170px;
-  margin-left: 20px;
-}
-
-.main__card_sert {
-  position: relative;
-  top: -280px;
-  left: 190px;
-}
-
-.main__card_logo {
-  position: relative;
-  top: -260px;
-  left: 450px;
-}
-
-.main__card_text1 {
-  position: relative;
-  top: -360px;
-  left: 130px;
-}
-
-.main__card_text2 {
-  position: relative;
-  top: -320px;
-  left: 130px;
-}
-
-.main__textcard {
-  padding: 40px 0px 0px 40px;
-}
-
-.main__input {
-  position: relative;
-  top: 35px;
-  left: 40px;
-}
-
-.main__input2 {
-  position: relative;
-  left: -220px;
-  top: 20px;
-}
 
 .feedback__title {
   grid-area: f-title;
@@ -731,7 +736,7 @@ main {
   display: none;
 }
 
-.block__hide + .block__label ~ .answer {
+.block__hide+.block__label~.answer {
   display: none;
 }
 
