--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,7 @@
 body {
   max-width: 1920px;
   width: 100%;
-  margin: auto;
+  margin: 0px auto;
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
@@ -11,112 +11,120 @@ body {
 
 /*-----------------------sasha's part------------------------------------*/
 
+
+
+
 .header {
+  max-height: 100vh;
   height: 918px;
-  border: 1px solid black;
-  background-image: url(./background.png);
+  background-image: url(../images/sasha/background.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.header__nav {
-  display: flex;
+.wrapper {
+  max-width: 90%;
+  height: 100%;
+  margin: 0px auto;
 }
 
-.header__nav_logo {
-  margin-left: 70px;
-  margin-top: 12px;
-  height: 142px;
-  width: 111px;
-}
-
-.header__nav_menu {
+.header__row {
   display: flex;
-  height: 15px;
-  width: 702px;
+  flex-direction: row;
   justify-content: space-between;
-  margin-top: 39px;
-  margin-left: 250px;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px 10px;
 }
 
-.header__nav_menu a {
+.header__logo {
+  display: flex;
+  align-items: center;
+}
+
+.header__list {
+  word-spacing: 5em;
+}
+
+.header__list a {
   text-decoration: none;
-  color: #fff;
-  font-family: montserrat;
-  font-size: 14px;
+  color: #ffffff;
+  size: 14px;
+  font-weight: 600;
+
+
+}
+
+.header__phone {
+  display: flex;
+  flex-direction: column;
+  color: #ffffff;
+  justify-content: baseline;
+
+}
+
+.header__phone span {
+  font-size: 20px;
+  font-weight: 600;
+
+}
+
+.header__title {
+  display: flex;
+  flex-direction: column;
+  height: 70vh;
+  width: 45%;
+}
+
+.header__title {
+  color: #ffffff;
+}
+
+.header__title h1 {
+  font-size: 70px;
+  font-weight: 800;
+}
+
+.header__title h3 {
+  font-size: 24px;
+  font-weight: 500;
 }
 
 #blue {
   color: #037e8c;
 }
 
-.header__nav_callme {
-  margin-top: 36px;
-  margin-left: auto;
-  margin-right: 74px;
-}
-
-.header__tel {
-  letter-spacing: 10px;
-}
-
-.header__form {
-  width: 180px;
+.header__button {
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 9px;
+  border: none;
+  width: 177px;
   height: 40px;
-  margin-top: 11px;
-  position: absolute;
-  margin-left: 28px;
-}
+  justify-content: center;
 
-.header__call {
-  margin-top: 25px;
-  margin-left: 50px;
-}
-
-.header__bigtext {
-  display: flex;
-  width: 595px;
-  height: 264px;
-  margin-left: 70px;
-  margin-top: 25px;
-}
-
-.header__bigtext p {
-  color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 70px;
-  font-weight: 800;
-  letter-spacing: 0.045em;
-}
-
-.header__smalltext {
-  margin-left: 70px;
-  margin-top: 125px;
-}
-
-.header__smalltext p {
-  color: #fff;
-  font-size: 24px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 108.7%;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 14px;
+  color: #ffffff;
 }
 
 .header__bluebutton {
-  margin-top: 100px;
-  margin-left: 70px;
-  word-spacing: 30px;
+  background: #037e8c;
+  border-radius: 9px;
+  border: none;
+  width: 274px;
+  height: 55px;
+  margin-top: 3em;
+  justify-content: center;
+
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  color: #ffffff;
+
 }
 
-.header__route {
-  margin-left: -290px;
-  margin-bottom: 19px;
-}
-
-.header__cursor {
-  margin-bottom: 12px;
-}
+/*-------------------main------------------*/
 
 .main__offer {
   margin-top: 100px;
