--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -772,6 +772,7 @@ main {
 }
 
 .copyrights {
+  padding-bottom: 1%;
   align-self: center;
   text-align: center;
   font-size: 1.1em;
@@ -791,8 +792,8 @@ main {
     "bottom bottom"
     "copyrights copyrights";
 }
-
-/*------Adaptive -----*/
+/*---------------------------------------------------------------------------------*/
+/*-------------------------------------Adaptive -----------------------------------*/
 @media screen and (max-width: 1100px) {
   .btn-details {
     margin-bottom: 5%;
@@ -1046,13 +1047,13 @@ main {
     font-size: 1.3em;
   }
 
-  .connect__title {
-    font-size: 1.1em;
+  .connect__img {
+    width: 5vw;
+    height: 5vw;
   }
 
-  .connect__img {
-    width: 8vw;
-    height: 8vw;
+  .connect__title {
+    font-size: 1.1em;
   }
 
   .footer-title {
@@ -1078,7 +1079,9 @@ main {
     width: 70%;
     margin-left: 15%;
   }
-
+  .bottom__logo {
+    margin-left: 5%;
+  }
   .bottom {
     margin: 0;
     padding-top: 2%;
@@ -1090,7 +1093,7 @@ main {
   }
 
   .nav {
-    width: 50%;
+    width: 40%;
     height: 100%;
 
     font-weight: 600;
@@ -1104,15 +1107,19 @@ main {
 
   .map {
     margin: 3% 0;
+    justify-self: center;
   }
-
+  .copyrights {
+    padding: 1%;
+    font-size: 0.4em;
+  }
   .footer__container {
     margin: 0 2%;
     border-top: 3px solid #037e8c;
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto 15% 9%;
+    grid-template-rows: auto;
     grid-template-areas:
       "title"
       "map"
