--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -58,6 +58,10 @@ body {
   line-height: 3;
 }
 
+.header__item {
+  margin-right: 10px;
+}
+
 .header__phone span {
   font-size: 20px;
   font-weight: 600;
@@ -67,15 +71,13 @@ body {
   display: flex;
   flex-direction: column;
   height: 70vh;
-  width: 30%;
-}
-
-.header__title {
+  width: 30vw;
   color: #ffffff;
+  max-width: 100%;
 }
 
 .header__title h1 {
-  font-size: 70px;
+  font-size: 4vw;
   font-weight: 800;
 }
 
@@ -92,14 +94,15 @@ body {
   background: rgba(255, 255, 255, 0.4);
   border-radius: 9px;
   border: none;
-  width: 185px;
+  width: 169px;
   height: 40px;
-  justify-content: center;
+  margin-left: 30px;
 
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
   color: #ffffff;
+  max-width: 100%;
 }
 
 .header__bluebutton {
@@ -112,6 +115,7 @@ body {
   margin-top: 3em;
   justify-content: space-around;
   align-items: center;
+  max-width: 100%;
 
   text-decoration: none;
   font-weight: 600;
@@ -120,7 +124,7 @@ body {
 }
 
 .sale {
-  height: 500px;
+  height: 440px;
   background-image: url(../images/sasha/багги\ 2.png),
     url(../images/sasha/деталька\ 1.png);
   background-repeat: no-repeat, no-repeat;
