--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -337,9 +337,9 @@ body {
   text-transform: uppercase;
 }
 
-.routes__time > span,
-.routes__distance > span,
-.routes__complexity > span {
+.routes__time>span,
+.routes__distance>span,
+.routes__complexity>span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -416,74 +416,121 @@ body {
 }
 
 /*ROUTS END*/
+/*video*/
+
+.video_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 594px;
+  background: no-repeat url(/CFMOTO/assets/images/services/unsplash_dvACrXUExLs.png);
+  background-size: 100%;
+
+}
+
+.pic_video {
+  max-width: 100%;
+  height: auto;
+}
 
 /*Team*/
 .team {
-  margin-top: 50px;
-}
-
-.team-title {
-  margin: 0 auto;
-  grid-area: t-title;
-  font-size: 36px;
-  text-align: center;
-}
-
-.t_photo {
-  background-color: #f4f4f4;
-  height: 409px;
-  border-radius: 9px;
-}
-
-.t_photo__title {
-  margin-top: 10px;
-}
-
-.t_photo__link {
-  font-weight: 700;
-  font-size: 24px;
-  margin-left: 5%;
-  text-decoration: none;
-  color: #037e8c;
-}
-
-.t_photo__img {
-  border-top-right-radius: 9px;
-  border-top-left-radius: 9px;
-}
-
-.function_team {
-  font-weight: 400px;
-  font-size: 18px;
-  margin-top: 0;
-  margin-left: 5%;
-}
-
-.photo-Yl {
-  grid-area: p-Yl;
-}
-
-.photo-Kr {
-  grid-area: p-Kr;
-}
-
-.photo-Mx {
-  grid-area: p-Mx;
-}
-
-.photo-Yr {
-  grid-area: p-Yr;
+  position: relative;
+  padding-top: 1%;
+  padding-bottom: 0.5%;
 }
 
 .team-container {
-  height: 400px;
-  display: grid;
-  margin: auto 0.5px;
-  grid-template-columns: repeat(4px 1fr);
-  grid-template-rows: 15% 5%;
-  grid-template-areas:
-    "t-title t-title t-title t-title"
-    "p-Yl p-Mx p-Kr p-Yr";
+  display: flex;
+  justify-content: space-around;
+  height: 510px;
+
+}
+
+.backg_right {
+  position: absolute;
+  width: 30%;
+  right: 0;
+  bottom: 7%;
+}
+
+.backg_left {
+  position: absolute;
+  width: 30%;
+  z-index: -1;
+  left: 0;
+  top: 10%;
+}
+
+.team-title {
+  margin: 2%;
+  font-weight: 700, bold;
+  font-size: 36px;
+  line-height: 130%;
+  text-align: center;
+  align-self: center;
+}
+
+.t_photo__img {
+  height: 90%;
+  width: auto;
+}
+
+/*Services*/
+
+.services {
+  padding: 1%;
+  background-image: url(/CFMOTO/assets/images/video/фон.png)
+}
+
+.s_title {
+  margin: 2%;
+  font-weight: 700, bold;
+  font-size: 36px;
+  line-height: 130%;
+  text-align: center;
+  align-self: center;
+}
+
+.services_container {
+  display: flex;
+  height: 523px;
+}
+
+.services_row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20%;
+}
+
+.services_column {
+  flex: 0 1 25%;
+  margin: 1%;
+  padding: 0 3%;
+}
+
+.s_item_row {
+  display: flex;
+  background-color: #ffff;
+  border-radius: 9px;
+  height: 112px;
+  margin: 0 -10%;
+}
+
+.s_img {
+  flex: 0 0 1%;
+  padding: 1%;
+  margin: 2%;
+}
+
+.s_item_text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  text-align: left;
+  align-self: center;
+  margin: 2% 5%;
 }
 
 /*ROUTS END*/
@@ -578,7 +625,7 @@ body {
   display: none;
 }
 
-.block__hide + .block__label ~ .answer {
+.block__hide+.block__label~.answer {
   display: none;
 }
 
@@ -801,6 +848,7 @@ body {
     "bottom bottom"
     "copyrights copyrights";
 }
+
 /*---------------------------------------------------------------------------------*/
 /*-------------------------------------Adaptive -----------------------------------*/
 @media screen and (max-width: 1100px) {
@@ -1088,9 +1136,11 @@ body {
     width: 70%;
     margin-left: 15%;
   }
+
   .bottom__logo {
     margin-left: 5%;
   }
+
   .bottom {
     margin: 0;
     padding-top: 2%;
@@ -1118,10 +1168,12 @@ body {
     margin: 3% 0;
     justify-self: center;
   }
+
   .copyrights {
     padding: 1%;
     font-size: 0.4em;
   }
+
   .footer__container {
     margin: 0 2%;
     border-top: 3px solid #037e8c;
