--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -47,10 +47,6 @@ body {
 }
 
 .navigation__link:hover {
-  text-decoration: underline;
-}
-
-.navigation__link_blue {
   color: #037e8c;
 }
 
@@ -90,6 +86,11 @@ body {
   font-size: 1vw;
   font-weight: 600;
   color: #ffffff;
+}
+
+.right__button:hover {
+  background-color: #ffffff;
+  color: #037e8c;
 }
 
 .area {
